media/overseerr/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: media
spec:
  serviceName: overseerr
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      volumes:
      - name: overseerr
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:overseerr
          targetPortal: 192.168.222.149
          lun: 1
          fsType: ext2
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr:version-v1.29.1
        volumeMounts:
        - name: overseerr
          subPath: config
          mountPath: /config
        ports:
        - name: overseerr
          containerPort: 5055
        readinessProbe:
          tcpSocket:
            port: overseerr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: overseerr
          initialDelaySeconds: 15
          periodSeconds: 20
