media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
  labels:
    app: overseerr
    version: v1
spec:
  selector:
    app: overseerr
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: http
