media/overseerr/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: overseerr
spec:
  hosts:
  - overseerr
  http:
  - route:
    - destination:
        host: overseerr
