media/overseerr/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: overseerr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: overseerr
  ingress:
  - ports:
    - port: 5055
    from: []
